--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     container_name: crud_php
     volumes:
       - ./app:/var/www/html
+      - ./php/php.ini:/usr/local/etc/php/php.ini
     working_dir: /var/www/html
     networks:
       - appnet
